@@ -1,8 +1,9 @@
 Version 0.3.0 (2014-xx-xx)
 --------------------------
-Apply callback to the Payload for an event rather than the event dictionary (#259)
+Applied callback to the Payload for an event rather than the event dictionary (#259)
 Added page scroll parameters to trackPagePing (#257)
-Added social tracking (#258) (TODO)
+Added social tracking (#258)
+Add addTo- and removeFrom- basket methods (#260) (TODO)
 
 Version 0.2.0 (2014-08-07)
 --------------------------
